# turtles

./: .copier-answers.yaml  .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml
examples/: README.md  draperie_example.py
rust/: Cargo.toml  rose_pattern.stl
rust/python/: clous_de_paris_bindings.rs  cube_bindings.rs  diamant_bindings.rs  guilloche_bindings.rs  huiteight_bindings.rs  lib.rs  limacon_bindings.rs  rose_engine_bindings.rs  watch_face_bindings.rs
rust/python/example/: mod.rs
rust/src/: clous_de_paris.rs  common.rs  cube.rs  diamant.rs  draperie.rs  flinque.rs  guilloche.rs  huiteight.rs  lib.rs  limacon.rs  paon.rs  spirograph.rs  watch_face.rs
rust/src/rose_engine/: config.rs  cutting_bit.rs  lathe.rs  lathe_run.rs  mod.rs  rosette.rs
src/: diamant_bindings.rs  draperie_bindings.rs  guilloche_bindings.rs  lib.rs  paon_bindings.rs  rose_engine_bindings.rs  spirograph_bindings.rs  watch_face_bindings.rs
turtles/: __init__.py
turtles/examples/: README.md  chronograph.py  clous_de_paris.py  cube.py  diamant.py  draperie.py  flinque.py  grain_de_riz.py  huit_eight.py  huiteight.py  paon.py  time_only.py
turtles/examples/guilloche/: README.md  clou_de_paris.py  diamant.py  draperie.py  flinque.py  grain_de_riz.py  huit_eight.py  panier.py  soleil_sunray.py
turtles/tests/: test_all.py
