[package]
name = "turtles"
version = "0.1.0"
authors = ["the turtles authors <dev@1kbgz.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/1kbgz/turtles"
description = "turtles turtles turtles turtles turtles turtles turtles turtles turtles turtles turtles turtles turtles turtles turtles turtles"

[lib]
name = "turtles"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
svg = "0.18"
stl_io = "0.7"
chrono = "0.4"

[profile.test.junit]
path = "junit.xml"

